--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="PSBR Exports | We export Quality"
     />
+    <title>We Export Quality - PSBR Exports</title>
+
+    <meta name="keywords" content="rich spices, healthy spices, cooking, nutrition, spices, exporting spices, spices in Coimbatore, spices export in cbe,spices in cbe, spices export in Coimbatore">
+    
+    <!-- Define the author of the webpage -->
+    <meta name="author" content="Your Name">
+
+    <!-- Define the character set for the webpage -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&display=swap">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
